fixed duplication check bug